# Census-Income-Classifier

./: .gitignore  Dockerfile  README.md  Xgb_lgbm_tune.ipynb  adult_lgbm_metadata.pkl  adult_lgbm_model.pkl  eda.ipynb  main.py  model_train.ipynb  pyproject.toml  test.py  train.py
notebooks/: Xgb_lgbm_tune.ipynb  eda.ipynb  model_train.ipynb
src/: main.py  test.py  train.py
streamlit-ui/: app.py
ui/: app.py
